# traine-rust

./: .gitignore  Cargo.toml  README.fr.md  README.md
01_Bases/: README.fr.md  README.md
01_Bases/exo1/: README.fr.md  README.md
01_Bases/exo2/: README.md
01_Bases/exo3/: README.md
01_Bases/exo4/: Cargo.toml  README.fr.md  README.md
01_Bases/exo5/: Cargo.toml  README.md
01_Bases/exo6/: Cargo.toml  README.fr.md  README.md
02_Ownership/: README.fr.md  README.md
02_Ownership/exo10/: Cargo.toml  README.fr.md  README.md
02_Ownership/exo11/: Cargo.toml  README.fr.md  README.md
02_Ownership/exo7/: Cargo.toml  README.fr.md  README.md
02_Ownership/exo8/: Cargo.toml  README.fr.md  README.md
02_Ownership/exo9/: Cargo.toml  README.fr.md  README.md
03_Structs_Enums/: README.fr.md  README.md
03_Structs_Enums/exo12/: Cargo.toml  README.fr.md  README.md
03_Structs_Enums/exo13/: Cargo.toml  README.md
03_Structs_Enums/exo14/: Cargo.toml  README.fr.md  README.md
03_Structs_Enums/exo15/: Cargo.toml  README.fr.md  README.md
04_Collections_Erreurs/: README.fr.md  README.md
04_Collections_Erreurs/exo16/: Cargo.toml  README.md
04_Collections_Erreurs/exo17/: README.md
04_Collections_Erreurs/exo18/: Cargo.toml  README.md
04_Collections_Erreurs/exo19/: Cargo.toml  README.md
05_Concepts_Avances/: README.fr.md  README.md
05_Concepts_Avances/exo20/: Cargo.toml  README.md
05_Concepts_Avances/exo21/: Cargo.toml  README.fr.md  README.md
05_Concepts_Avances/exo22/: Cargo.toml  README.fr.md  README.md
05_Concepts_Avances/exo23/: Cargo.toml  README.md
05_Concepts_Avances/exo24/: Cargo.toml  README.md
05_Concepts_Avances/exo25/: Cargo.toml  README.fr.md  README.md
06_Concurrence_Tests/: README.fr.md  README.md
06_Concurrence_Tests/exo26/: Cargo.toml  README.md
06_Concurrence_Tests/exo27/: Cargo.toml  README.fr.md  README.md
06_Concurrence_Tests/exo28/: Cargo.toml  README.fr.md  README.md
07_Async_Tokio/: README.fr.md  README.md
07_Async_Tokio/exo29/: Cargo.toml  README.fr.md  README.md
07_Async_Tokio/exo30/: Cargo.toml  README.fr.md  README.md
07_Async_Tokio/exo31/: Cargo.toml  README.fr.md  README.md
07_Async_Tokio/exo32/: Cargo.toml  README.fr.md  README.md
07_Async_Tokio/exo33/: Cargo.toml  README.fr.md  README.md
07_Async_Tokio/exo34/: Cargo.toml  README.fr.md  README.md
07_Async_Tokio/exo35/: Cargo.toml  README.fr.md  README.md
07_Async_Tokio/exo36/: Cargo.toml  README.fr.md  README.md
07_Etude_de_Cas/Gestionnaire_de_Bibliotheque/: README.md
Project/minigrep/: Cargo.toml
Project/minigrep/src/: main.rs
Project/snake_tui/: Cargo.toml
(+45 files in other folders)
