[workspace]
resolver = "2"

members = [
    "01_Bases/exo1",
    "01_Bases/exo2",
    "01_Bases/exo3",
    "01_Bases/exo4",
    "01_Bases/exo5",
    "01_Bases/exo6",
    "02_Ownership/exo7",
    "02_Ownership/exo8",
    "02_Ownership/exo9",
    "02_Ownership/exo10",
    "02_Ownership/exo11",
    "03_Structs_Enums/exo12",
    "03_Structs_Enums/exo13",
    "03_Structs_Enums/exo14",
    "03_Structs_Enums/exo15",
    "04_Collections_Erreurs/exo16",
    "04_Collections_Erreurs/exo17",
    "04_Collections_Erreurs/exo18",
    "04_Collections_Erreurs/exo19",
    "05_Concepts_Avances/exo20",
    "05_Concepts_Avances/exo21",
    "05_Concepts_Avances/exo22",
    "05_Concepts_Avances/exo23",
    "05_Concepts_Avances/exo24",
    "05_Concepts_Avances/exo25",
    "06_Concurrence_Tests/exo26",
    "06_Concurrence_Tests/exo27",
    "06_Concurrence_Tests/exo28", 
    "07_Etude_de_Cas/Gestionnaire_de_Bibliotheque",
]
